--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -17,9 +17,8 @@
   width: 100vh;
 } */
 
-.top {
+.pc_top {
   width: 700px;
-  /* width: 900px; */
   margin-left: 15%;
   margin-right: 100px;
   display: flex;
@@ -27,14 +26,13 @@
   align-items: center;
 }
 
-.top .ttl {
+.pc_top .ttl {
   width: 540px;
   height: 32px;
   border-left: 5px solid #f2917e;
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
-  /* margin: auto auto 20px 56px; */
 }
 
 h1 {
@@ -58,12 +56,10 @@ h1 {
 }
 
 .img_pc {
-  /* width: 600px; */
   height: 348px;
 }
 
 .img_pc img {
-  /* width: 100%; */
   height: 100%;
 }
 
@@ -78,12 +74,27 @@ h1 {
   width: 100%;
 }
 
+.sp_top,
+.sp_ttl {
+  display: none;
+}
+
 .contents {
   display: flex;
   height: 100%;
   align-items: center;
   gap: 23px;
   margin-right: 10px;
+}
+
+.list_left {
+  display: flex;
+}
+
+.list_ttl {
+  font-size: 15px;
+  line-height: 3;
+  color: #fffcf5;
 }
 
 table {
@@ -139,13 +150,170 @@ h2 {
 }
 
 @media screen and (max-width: 1100px) {
-  .top {
+  .pc_top {
     margin-left: 8%;
     margin-right: 0px;
   }
 
   .img_sp {
     left: 460px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  main > section:nth-of-type(1) {
+    display: none;
+  }
+  .pc_top {
+    display: none;
+  }
+
+  .sp_wrapper {
+    height: 650px;
+  }
+
+  .sp_top {
+    width: 700px;
+    margin-left: 0px;
+    margin-right: 100px;
+    display: flex;
+    height: 290px;
+    align-items: stretch;
+  }
+
+  .page_ttl {
+    display: flex;
+  }
+
+  .page_ttl p:nth-of-type(1) {
+    font-size: 12px;
+    letter-spacing: 0.18em;
+    line-height: 2.5;
+    color: #fffcf5;
+    width: 70px;
+    height: 30px;
+    background: #f2917e;
+    text-align: center;
+  }
+
+  .page_ttl p:nth-of-type(2) {
+    font-size: 12px;
+    letter-spacing: 0.18em;
+    line-height: 2.5;
+    width: 40px;
+    height: 30px;
+    text-align: center;
+  }
+
+  .ttl p {
+    /* font-size: 16px; */
+    /* letter-spacing: 0.2em; */
+    /* line-height: 2; */
+    /* text-align: center; */
+    /* width: 91px; */
+    /* height: 32px; */
+    /* border: 1px solid #f2917e; */
+    /* border-radius: 16px; */
+  }
+
+  .img {
+    /* position: relative; */
+    margin-top: 40px;
+  }
+
+  .img_pc {
+    height: 194px;
+  }
+
+  .img_pc img {
+    /* height: 100%; */
+  }
+
+  .img_sp {
+    width: 77px;
+    /* position: absolute; */
+    top: 45px;
+    left: 250px;
+  }
+
+  .img_sp img {
+    /* width: 100%; */
+  }
+
+  .contents {
+    /* display: flex; */
+    height: auto;
+    /* align-items: center; */
+    /* gap: 23px; */
+    /* margin-right: 10px; */
+  }
+
+  .sp_ttl {
+    display: block;
+    /* width: 540px; */
+    /* height: 32px; */
+    /* border-left: 5px solid #f2917e; */
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* margin-bottom: 20px; */
+  }
+
+  h1 {
+    font-size: 14px;
+    writing-mode: vertical-lr;
+    /* margin-left: 10px; */
+  }
+
+  table {
+    /* border-spacing: 0px 20px; */
+  }
+
+  th {
+    /* width: 104px; */
+    /* background: #f2917e; */
+    /* border: 1px solid #f2917e; */
+  }
+
+  th p {
+    /* font-size: 15px; */
+    /* line-height: 3; */
+    /* color: #fffcf5; */
+  }
+
+  td {
+    /* width: 390px; */
+    /* border: 1px solid #f2917e; */
+  }
+
+  td p {
+    /* font-size: 15px; */
+    /* line-height: 3; */
+    /* margin-left: 17px; */
+  }
+
+  .point {
+    /* width: 677px; */
+    /* height: 400px; */
+    /* border: 1px solid #f2917e; */
+    /* border-left: 11px solid #f2917e; */
+    /* display: flex; */
+    /* position: relative; */
+  }
+
+  h2 {
+    /* font-size: 17px; */
+    /* color: #f2917e; */
+    /* position: absolute; */
+    /* top: 15px; */
+    /* left: 15px; */
+  }
+
+  .point p {
+    /* font-size: 14px; */
+    /* width: 290px; */
+    /* height: 313px; */
+    /* margin-top: 57px; */
+    /* margin-left: 40px; */
   }
 }
 
