--- a/portfolio_ideta/css/about.css
+++ b/portfolio_ideta/css/about.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
-/* ---------- 共通 ---------- */
+/* -------------------- 
+   共通
+ -------------------- */
 
 .profile,
 .history,
@@ -13,6 +15,15 @@
   align-items: center;
 }
 
+.skills,
+.strength,
+.love {
+  width: 70vw;
+}
+.design {
+  width: 100vw;
+}
+
 .profile .wrapper,
 .history .wrapper,
 .skills .wrapper,
@@ -20,21 +31,50 @@
 .love .wrapper,
 .design .wrapper {
   display: flex;
+  width: 100%;
 }
 
-/* .profile .first_contents,
-.profile .second_contents, */
 .history .top_contents,
 .skills .top_contents,
 .strength .top_contents,
 .love .top_contents,
 .design .top_contents {
   display: flex;
-  width: 100vw;
+  width: 100%;
+  /* width: 100vw; */
   justify-content: center;
 }
 
-/* ---------- 共通 セクションタイトル ---------- */
+/* 1366以上の設定 */
+@media screen and (min-width: 1366px) {
+  .skills,
+  .strength,
+  .love {
+    /* .design { */
+    width: 960px;
+  }
+}
+
+/* @media screen and (max-width: 1366px) {
+  .skills,
+  .strength,
+  .love {
+    width: 100vw;
+  }
+} */
+
+@media screen and (max-width: 767px) {
+  .skills .top_contents,
+  .strength .top_contents,
+  .love .top_contents,
+  .design .top_contents {
+    display: block;
+  }
+}
+
+/* -------------------- 
+   共通 セクションタイトル 
+-------------------- */
 
 .ttl {
   width: 60px;
@@ -116,12 +156,17 @@ h2 {
   }
 }
 
-/* ---------- profile ---------- */
+/* --------------------
+   profile 
+-------------------- */
 
 .profile {
-  background-image: url(../images/flower00.png);
+  background-image: url(../images/flower001.png);
   background-repeat: no-repeat;
-  background-position: 52% bottom;
+  background-position: 58% bottom;
+  /* background-image: url(../images/flower002.png);
+  background-repeat: no-repeat;
+  background-position: right bottom; */
 }
 
 .profile .first_contents {
@@ -135,7 +180,8 @@ h2 {
   height: 300px;
 }
 
-.profile .pc_txt {
+.profile .pc_txt,
+.profile .txt {
   width: 590px;
   padding-right: 5%;
 }
@@ -152,7 +198,7 @@ h2 {
 }
 
 .profile .second_contents {
-  width: 68vw;
+  width: 58vw;
 }
 
 .profile .second_contents p:nth-of-type(2) {
@@ -171,18 +217,22 @@ h2 {
     gap: 7%;
   }
 
+  .profile .pc_txt,
   .profile .txt {
     width: 503px;
     padding-right: 0;
     margin-top: 125px;
   }
 
+  .profile .pc_txt p,
   .profile .txt p {
+    line-height: 1.7;
+
     width: 503px;
   }
 
   .profile .second_contents {
-    width: 85vw;
+    width: 84vw;
   }
 
   .profile .second_contents p:nth-of-type(2) {
@@ -191,6 +241,10 @@ h2 {
 }
 
 @media screen and (max-width: 767px) {
+  .profile {
+    background-position: 4% 93%;
+  }
+
   .profile .first_contents {
     display: block;
     width: 738px;
@@ -219,6 +273,7 @@ h2 {
   }
 
   .profile .second_contents {
+    width: 520px;
     margin-left: 42px;
   }
 
@@ -232,21 +287,19 @@ h2 {
     margin-left: 18px;
   }
 }
-/* ---------- history ---------- */
+/* --------------------
+   history 
+-------------------- */
 
-/* .history .wrapper {
-  display: flex;
-} */
+.history {
+  width: 100vw;
+  /* background-image: url(../images/flower002.png);
+  background-repeat: no-repeat;
+  background-position: right bottom; */
+}
 
 .history .top_contents {
-  /* display: flex;
-  width: 100vw;
-  justify-content: center; */
   gap: 6%;
-  /* background-image: url(../images/gragh.png);
-  background-size: 81%;
-  background-repeat: no-repeat;
-  background-position: 60% bottom; */
   position: relative;
 }
 
@@ -259,11 +312,12 @@ h2 {
   justify-content: space-between;
   gap: 1%;
   width: 72%;
+  max-width: 983px;
   position: relative;
 }
 
 .history .img {
-  width: 110%;
+  width: 114%;
   position: absolute;
   bottom: 0px;
   right: 0%;
@@ -277,7 +331,6 @@ h2 {
   position: relative;
   width: 90px;
   height: 400px;
-  /* z-index: 0; */
 }
 
 h3 {
@@ -292,15 +345,6 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-
-/* .history .line {
-  width: 70px;
-  height: 393px; */
-/* border-top: 1px solid #f2917e;
-  border-left: 1px solid #f2917e; */
-/* position: absolute;
-  top: 0px;
-  left: 0px; */
 
 .history .txt {
   writing-mode: vertical-rl;
@@ -322,7 +366,7 @@ h3 {
 
 .history .content_last {
   display: flex;
-  gap: 17px;
+  gap: 14px;
 }
 
 .history .content_last p {
@@ -341,8 +385,9 @@ h3 {
   color: #fffcf5;
   text-align: center;
   line-height: 2;
-  width: 270px;
+  width: 263px;
   border: 1px solid #fffcf5;
+  box-sizing: border-box;
   margin: 0 auto;
   position: relative;
   z-index: 3;
@@ -354,33 +399,159 @@ h3 {
   letter-spacing: 0.025em;
   text-align: center;
   width: 270px;
-  margin: 0 auto;
+  margin: 10px auto 0px;
   position: relative;
   z-index: 4;
 }
 
 @media screen and (max-width: 1100px) {
-  .history .top_contents {
-    width: 145vw;
+  .history {
+    /* width: 137vw; */
+  }
+
+  .history .contents {
+    max-width: none;
+    min-width: 840px;
   }
 }
 
-/* ---------- skills ---------- */
+@media screen and (max-width: 767px) {
+  .history {
+    width: 1040px;
+    /* width: auto; */
+    background-image: url(../images/flower002.png);
+    background-repeat: no-repeat;
+    background-position: right 93%;
+    background-size: 160px;
+  }
 
-/* .skills {
-  margin-left: 40px;
-} */
+  .history .top_contents {
+    display: block;
+    width: 100%;
+    /* justify-content: center; */
+    /* gap: 6%; */
+    /* position: relative; */
+  }
 
-/* .skills .wrapper {
-  display: flex;
-} */
+  .history .ttl {
+    height: auto;
+  }
 
-/* .skills .top_contents {
-  display: flex;
-  width: 100vw;
-  justify-content: center;
-  gap: 10%;
-} */
+  .history h2 {
+    margin-left: 0px;
+  }
+
+  .history .contents {
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* gap: 1%; */
+    /* width: 72%; */
+    width: 840px;
+    /* max-width: none; */
+    /* min-width: 840px; */
+    /* position: relative; */
+    margin-top: 40px;
+  }
+
+  .history .img {
+    /* width: 114%; */
+    /* position: absolute; */
+    /* bottom: 0px; */
+    /* right: 0%; */
+    /* z-index: 1; */
+  }
+
+  .history .content {
+    /* border-top: 1px solid #f2917e; */
+    /* border-left: 1px solid #f2917e; */
+    /* display: flex; */
+    /* position: relative; */
+    /* width: 90px; */
+    /* height: 400px; */
+  }
+
+  h3 {
+    /* letter-spacing: 0.18em; */
+    /* writing-mode: vertical-rl; */
+    /* color: #fffcf5; */
+    /* width: 27px; */
+    /* height: 86px; */
+    /* background-color: #f2917e; */
+    /* text-align: center; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+  }
+
+  .history .txt {
+    /* writing-mode: vertical-rl; */
+    /* display: block; */
+    /* margin-top: 14px; */
+    /* margin-left: 9%; */
+    /* position: relative; */
+    /* z-index: 2; */
+  }
+
+  .line_diagonal {
+    /* width: 13px; */
+    /* border-bottom: 1px solid #f2917e; */
+    /* transform: rotate(45deg); */
+    /* position: absolute; */
+    /* top: -5px; */
+    /* left: 88%; */
+  }
+
+  .history .content_last {
+    /* display: flex; */
+    /* gap: 14px; */
+  }
+
+  .history .content_last p {
+    /* line-height: 1.5; */
+    /* letter-spacing: 0.025em; */
+    /* position: relative; */
+    /* z-index: 2; */
+  }
+
+  .history .content_bottom {
+    /* width: 280px; */
+    /* margin-top: 88px; */
+  }
+
+  .history .content_bottom p:nth-of-type(1) {
+    /* color: #fffcf5; */
+    /* text-align: center; */
+    /* line-height: 2; */
+    /* width: 263px; */
+    /* border: 1px solid #fffcf5; */
+    /* box-sizing: border-box; */
+    /* margin: 0 auto; */
+    /* position: relative; */
+    /* z-index: 3; */
+  }
+
+  .history .content_bottom p:nth-of-type(2) {
+    /* color: #fffcf5; */
+    /* line-height: 1.5; */
+    /* letter-spacing: 0.025em; */
+    /* text-align: center; */
+    /* width: 270px; */
+    /* margin: 10px auto 0px; */
+    /* position: relative; */
+    /* z-index: 4; */
+  }
+}
+
+/* --------------------
+   skills 
+-------------------- */
+
+.skills {
+  width: 90vw;
+  background-image: url(../images/flower002.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
 
 .skills .ttl {
   height: 263px;
@@ -388,18 +559,17 @@ h3 {
 
 .skills .ttl_line {
   width: 350px;
-  /* width: 770%;にすると1366でいい感じだが1100でかぶる、どの画面幅でも画面端に少し見えるようにしたい */
 }
 
-.skills table:nth-of-type(1) {
+.skills .pc_table:nth-of-type(1) {
   margin-left: 120px;
 }
 
-.skills table:nth-of-type(2) {
+.skills .pc_table:nth-of-type(2) {
   margin-left: 45px;
 }
 
-table {
+.pc_table {
   margin-top: 30px;
 }
 
@@ -458,7 +628,14 @@ td {
   width: 54px;
 }
 
+.sp_table {
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
+  .skills {
+  }
+
   .skills table:nth-of-type(1) {
     margin-left: 8%;
   }
@@ -467,24 +644,59 @@ td {
     margin-left: 3%;
   }
 }
+@media screen and (max-width: 767px) {
+  .skills {
+    width: 100vw;
+    background-image: none;
+  }
 
-/* ---------- 共通 strength love design ---------- */
+  /* .skills .top_contents {
+    display: block;
+  } */
 
-/* .strength,
-.love,
-.design {
-  margin-left: 40px;
-} */
-/* .strength > div,
-.love > div,
-.design > div {
-  display: flex;
-} */
+  .skills .ttl {
+    height: auto;
+  }
 
-.strength .contents,
-.love .contents,
-.design .contents {
-  margin-left: 84px;
+  .skills h2 {
+    width: 142px;
+    margin: 69px auto 65px;
+  }
+
+  .pc_table {
+    display: none;
+  }
+
+  .sp_table {
+    display: flex;
+    justify-content: center;
+  }
+
+  .middle {
+    margin-top: 45px;
+  }
+
+  th {
+    width: 85px;
+    padding-right: 0px;
+  }
+
+  td {
+    width: 85px;
+    height: auto;
+    text-align: center;
+    padding-right: 0px;
+  }
+}
+
+/* -------------------- 
+   共通 strength love design 
+-------------------- */
+
+.strength .top_contents,
+.love .top_contents,
+.design .top_contents {
+  gap: 84px;
 }
 
 .strength .content,
@@ -504,7 +716,43 @@ td {
   margin-right: 20px;
 }
 
-/* ---------- strength ---------- */
+@media screen and (max-width: 767px) {
+  /* .strength,
+  .love,
+  .design {
+    margin-left: 100px;
+  } */
+
+  .strength .contents,
+  .love .contents,
+  .design .contents {
+    width: 272px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  /* .strength .content,
+  .love .content,
+  .design .content {
+    text-align: center;
+  } */
+}
+
+/* -------------------- 
+  strength 
+-------------------- */
+
+.strength {
+  width: 650px;
+  background-image: url(../images/flower003.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+/* .strength {
+  background-image: url(../images/flower002.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+} */
 
 .strength .ttl {
   height: 227px;
@@ -523,7 +771,46 @@ td {
   margin-top: 32px;
 }
 
-/* ---------- love ---------- */
+@media screen and (max-width: 767px) {
+  .strength {
+    /* width: 100vw; */
+    /* background-image: url(../images/flower003.png); */
+    /* background-repeat: no-repeat; */
+    background-position: right 93%;
+    background-size: 160px;
+  }
+
+  .strength .ttl {
+    height: auto;
+  }
+
+  .strength h2 {
+    width: 120px;
+    margin: 69px auto 65px;
+  }
+
+  .strength .ttl_line {
+    /* width: 970%; */
+  }
+
+  .strength .contents > p:nth-of-type(1) {
+    /* margin-top: 78px; */
+    width: 272px;
+  }
+
+  .strength .contents > p:nth-of-type(2) {
+    /* width: 272px; */
+    /* margin-top: 32px; */
+  }
+}
+
+/* -------------------- 
+   love 
+-------------------- */
+
+.love {
+  width: 70vw;
+}
 
 .love .ttl {
   height: 223px;
@@ -533,7 +820,36 @@ td {
   width: 1080%;
 }
 
-/* ---------- design ---------- */
+@media screen and (max-width: 767px) {
+  .love {
+    width: 100vw;
+  }
+
+  .love .ttl {
+    height: auto;
+  }
+
+  .love h2 {
+    width: 120px;
+    margin: 69px auto 65px;
+  }
+
+  .love .ttl_line {
+    /* width: 1080%; */
+  }
+}
+
+/* --------------------
+   design 
+-------------------- */
+
+.design {
+  width: 100vw;
+  background-image: url(../images/flower004.png);
+  background-repeat: no-repeat;
+  background-position: 88% bottom;
+  /* margin-right: 200px; */
+}
 
 .design .ttl {
   height: 268px;
@@ -541,4 +857,28 @@ td {
 
 .design .ttl_line {
   width: 300%;
+}
+
+@media screen and (max-width: 767px) {
+  .design {
+    /* width: 100vw; */
+    /* background-image: url(../images/flower004.png); */
+    /* background-repeat: no-repeat; */
+    background-position: 88% 93%;
+    background-size: 160px;
+    /* margin-right: 200px; */
+  }
+
+  .design .ttl {
+    height: auto;
+  }
+
+  .design h2 {
+    width: 167px;
+    margin: 69px auto 65px;
+  }
+
+  .design .ttl_line {
+    /* width: 300%; */
+  }
 }
