--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -1,22 +1,5 @@
 @charset "UTF-8";
 
-/* body {
-  background-image: url(../images/bg_1-80.jpg);
-  height: 100vh;
-  background-repeat: no-repeat;
-} */
-
-/* main > section:nth-of-type(1) {
-  background-image: url(../images/bg_1-80.jpg);
-  height: 100vh;
-  background-repeat: no-repeat;
-} */
-
-/* .bg {
-  background-image: url(../images/bg-80.jpg);
-  width: 100vh;
-} */
-
 .pc_top {
   width: 700px;
   margin-left: 15%;
@@ -32,6 +15,7 @@
   border-left: 5px solid #f2917e;
   display: flex;
   justify-content: space-between;
+  margin-left: 57px;
   margin-bottom: 20px;
 }
 
@@ -47,7 +31,7 @@ h1 {
   text-align: center;
   width: 91px;
   height: 32px;
-  border: 1px solid #f2917e;
+  border: 1px solid #423732;
   border-radius: 16px;
 }
 
@@ -74,6 +58,12 @@ h1 {
   width: 100%;
 }
 
+.sp_container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
 .sp_top,
 .sp_ttl {
   display: none;
@@ -87,48 +77,41 @@ h1 {
   margin-right: 10px;
 }
 
-.list_left {
+ul {
   display: flex;
+  align-items: center;
+}
+
+.list_row:nth-of-type(n + 2) {
+  margin-top: 23px;
 }
 
 .list_ttl {
   font-size: 15px;
   line-height: 3;
+  text-align: center;
   color: #fffcf5;
-}
-
-table {
-  border-spacing: 0px 20px;
-}
-
-th {
   width: 104px;
+  height: 47px;
   background: #f2917e;
-  border: 1px solid #f2917e;
 }
 
-th p {
+.list_txt {
   font-size: 15px;
   line-height: 3;
-  color: #fffcf5;
-}
-
-td {
   width: 390px;
+  height: 47px;
+  padding-left: 17px;
   border: 1px solid #f2917e;
-}
-
-td p {
-  font-size: 15px;
-  line-height: 3;
-  margin-left: 17px;
+  box-sizing: border-box;
 }
 
 .point {
   width: 677px;
-  height: 400px;
+  height: 397px;
   border: 1px solid #f2917e;
   border-left: 11px solid #f2917e;
+  box-sizing: border-box;
   display: flex;
   position: relative;
 }
@@ -168,7 +151,13 @@ h2 {
     display: none;
   }
 
-  .sp_wrapper {
+  .sp_container.active {
+    display: flex;
+    height: 100%;
+    align-items: center;
+  }
+
+  .inner {
     height: 650px;
   }
 
@@ -205,119 +194,66 @@ h2 {
     text-align: center;
   }
 
-  .ttl p {
-    /* font-size: 16px; */
-    /* letter-spacing: 0.2em; */
-    /* line-height: 2; */
-    /* text-align: center; */
-    /* width: 91px; */
-    /* height: 32px; */
-    /* border: 1px solid #f2917e; */
-    /* border-radius: 16px; */
-  }
-
   .img {
-    /* position: relative; */
-    margin-top: 40px;
+    margin-top: 48px;
+    margin-left: 10px;
   }
 
   .img_pc {
-    height: 194px;
-  }
-
-  .img_pc img {
-    /* height: 100%; */
+    height: 202px;
   }
 
   .img_sp {
     width: 77px;
-    /* position: absolute; */
-    top: 45px;
-    left: 250px;
-  }
-
-  .img_sp img {
-    /* width: 100%; */
+    top: 52px;
+    left: 262px;
   }
 
   .contents {
-    /* display: flex; */
     height: auto;
-    /* align-items: center; */
-    /* gap: 23px; */
-    /* margin-right: 10px; */
+    align-items: stretch;
+    margin-top: 26px;
   }
 
   .sp_ttl {
     display: block;
-    /* width: 540px; */
-    /* height: 32px; */
-    /* border-left: 5px solid #f2917e; */
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* margin-bottom: 20px; */
   }
 
   h1 {
     font-size: 14px;
     writing-mode: vertical-lr;
-    /* margin-left: 10px; */
+    margin-left: 28px;
   }
 
-  table {
-    /* border-spacing: 0px 20px; */
+  .list_row:nth-of-type(n + 2) {
+    margin-top: 13px;
   }
 
-  th {
-    /* width: 104px; */
-    /* background: #f2917e; */
-    /* border: 1px solid #f2917e; */
+  .list_ttl {
+    line-height: 2.2;
+    height: 33px;
   }
 
-  th p {
-    /* font-size: 15px; */
-    /* line-height: 3; */
-    /* color: #fffcf5; */
-  }
-
-  td {
-    /* width: 390px; */
-    /* border: 1px solid #f2917e; */
-  }
-
-  td p {
-    /* font-size: 15px; */
-    /* line-height: 3; */
-    /* margin-left: 17px; */
+  .list_txt {
+    line-height: 2.2;
+    height: 33px;
   }
 
   .point {
-    /* width: 677px; */
-    /* height: 400px; */
-    /* border: 1px solid #f2917e; */
-    /* border-left: 11px solid #f2917e; */
-    /* display: flex; */
-    /* position: relative; */
-  }
-
-  h2 {
-    /* font-size: 17px; */
-    /* color: #f2917e; */
-    /* position: absolute; */
-    /* top: 15px; */
-    /* left: 15px; */
+    width: 710px;
+    height: 263px;
   }
 
   .point p {
-    /* font-size: 14px; */
-    /* width: 290px; */
-    /* height: 313px; */
-    /* margin-top: 57px; */
-    /* margin-left: 40px; */
+    width: 330px;
+    height: 205px;
+    margin-left: 15px;
   }
 }
 
-/* ---------- ALL ---------- */
+/* ーーーーーーーーーー
+   ALL
+ーーーーーーーーーー */
 
 .all {
   display: flex;
@@ -335,6 +271,12 @@ h2 {
   font-feature-settings: initial;
 }
 
+.txt_wrapper {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
 .allpage p:nth-of-type(1) {
   margin-top: 90px;
 }
@@ -344,13 +286,15 @@ h2 {
 }
 
 .allpage div {
-  /* width: 360px; */
   height: 100vh;
 }
 
 .allpage img {
   width: 100%;
-  /* height: 100%; */
+}
+.allpage .a img {
+  height: 100%;
+  max-width: none;
 }
 
 .allpage > div:nth-of-type(4),
@@ -369,7 +313,8 @@ h2 {
 .all .wrapper {
   display: flex;
   align-items: flex-end;
-  padding-right: 150px;
+  margin-left: 20px;
+  margin-right: 150px;
 }
 
 .all a {
@@ -384,24 +329,21 @@ h2 {
   border-radius: 60px;
   background: #fff;
   border: 1px solid #53c711;
-  /* position: relative; */
 }
+
+/* ーーーーーーーーーー
+   ボタン
+ーーーーーーーーーー */
 
 .btn p {
   font-size: 14px;
   letter-spacing: 0.2em;
   text-align: center;
   margin-top: 42px;
-  /* position: absolute;
-    top: 42px;
-    left: 19px; */
 }
 
 .btn img {
   width: 26px;
   display: block;
   margin: 10px auto auto;
-  /* position: absolute;
-    top: 75px;
-    left: 48px; */
 }
