--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -24,38 +24,14 @@ section {
   scroll-snap-align: start;
 }
 
-/* html {
-  scroll-behavior: smooth;
-} */
-
 body {
   width: 100vw;
   background-color: #fffcf5;
 }
 
-/* main > section:nth-of-type(1) {
-  background-image: url(../images/bg_1-80.jpg);
-  background-repeat: no-repeat;
-} */
-
-/* body {
-  background-image: url(../images/bg_1-80.jpg);
-  background-repeat: no-repeat;
-  background-color: #fffcf5;
-  background-position-y: top;
-  background-position-x: left;
-} */
-
 main {
-  /* background-image: url(../images/bg_1-80.jpg); */
-  /* background-repeat: no-repeat; */
   background-color: #fffcf5;
-  /* color: #fffcf5; */
-  /* width: 5000px; */
   height: 100%;
-  /* background-position: left top; */
-  /* background-attachment: local; */
-  /* background-position-x: left; */
 }
 
 .wrapper {
@@ -263,18 +239,35 @@ header .wrapper {
     position: static;
   }
 
+  .fade-effect {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fffcf5;
+    opacity: 0;
+    z-index: 999;
+    transition: opacity 0.5s ease;
+  }
+
+  .fade-effect.show {
+    opacity: 1;
+  }
+
   .sp_menu > div {
     display: flex;
   }
 
-  .sp_menu {
+  /* .sp_menu {
     opacity: 0;
     transition: 0.3s;
   }
 
   .sp_menu.active {
     opacity: 1;
-  }
+  } */
 
   .menu_portfolioname {
     height: 100vh;
