--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -255,7 +255,7 @@ h2 {
    ALL
 ーーーーーーーーーー */
 
-.all {
+.pc_all {
   display: flex;
   align-items: center;
 }
@@ -310,14 +310,14 @@ h2 {
   align-items: center;
 }
 
-.all .wrapper {
+.pc_all .wrapper {
   display: flex;
   align-items: flex-end;
   margin-left: 20px;
   margin-right: 150px;
 }
 
-.all a {
+.pc_all a {
   width: 120px;
   height: 120px;
   border-radius: 60px;
@@ -329,6 +329,44 @@ h2 {
   border-radius: 60px;
   background: #fff;
   border: 1px solid #53c711;
+}
+
+.sp_all {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .pc_all {
+    display: none;
+  }
+
+  .sp_all {
+    display: block;
+    /* justify-content: center; */
+    width: 100vw;
+    margin-top: 36px;
+  }
+
+  .sp_all p {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .images_top {
+    width: 90%;
+    margin: 10px auto 30px;
+  }
+
+  .images {
+    display: flex;
+    justify-content: center;
+    gap: 2%;
+  }
+
+  .images_left,
+  .images_right {
+    width: 44%;
+  }
 }
 
 /* ーーーーーーーーーー
