--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+/* .main {
+  overflow: auto;
+  scroll-snap-type: mandatory;
+  display: flex;
+} */
+
 .bg {
   position: fixed;
   top: 0;
@@ -13,16 +19,16 @@
   opacity: 1;
 }
 
-main {
+/* main {
   overflow: hidden;
   overflow-x: scroll;
 
   scroll-snap-type: x mandatory;
-}
+} */
 
-section {
+/* section {
   scroll-snap-align: start;
-}
+} */
 
 body {
   width: 100vw;
@@ -83,10 +89,6 @@ main {
   z-index: 10001;
 }
 
-.top_portfolioname.open {
-  display: none;
-}
-
 .top_portfolioname p {
   writing-mode: vertical-rl;
   margin: 0 auto;
@@ -107,6 +109,10 @@ main {
     z-index: 5000;
   }
 
+  .top_portfolioname.open {
+    display: none;
+  }
+
   .top_portfolioname p {
     font-size: 12px;
     writing-mode: horizontal-tb;
@@ -124,7 +130,8 @@ main {
   background: #fffcf5;
   align-items: center;
   position: fixed;
-  right: 0px;
+  /* right: 0px; */
+  /* 消したもの② */
   z-index: 10000;
 }
 
@@ -190,7 +197,8 @@ header .wrapper {
     height: 45px;
     background: #f2917e;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
+    /* ③absolutelから変更 */
     bottom: 0px;
     right: 0px;
     z-index: 5100;
@@ -236,7 +244,8 @@ header .wrapper {
     display: block;
     height: 100%;
     background-color: #fffcf5;
-    position: static;
+    /* position: static; */
+    /* 消したもの① */
   }
 
   .fade-effect {
