--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -292,7 +292,7 @@ h2 {
 .allpage img {
   width: 100%;
 }
-.allpage .a img {
+.allpage .maxheight img {
   height: 100%;
   max-width: none;
 }
@@ -384,4 +384,33 @@ h2 {
   width: 26px;
   display: block;
   margin: 10px auto auto;
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+PC版ALLPAGESが右からふわっとフェードイン
+ーーーーーーーーーーーーーーーーーーーー*/
+
+.fadeIn {
+  animation-name: fadeInAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInAnime {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* スクロールをしたら出現する要素にはじめに透過0を指定　*/
+
+.fadeInTrigger {
+  opacity: 0;
 }
