--- a/portfolio_ideta/css/about.css
+++ b/portfolio_ideta/css/about.css
@@ -15,14 +15,14 @@
   align-items: center;
 }
 
-.skills,
+/* .skills,
 .strength,
 .love {
   width: 70vw;
 }
 .design {
   width: 100vw;
-}
+} */
 
 .profile .wrapper,
 .history .wrapper,
@@ -41,27 +41,8 @@
 .design .top_contents {
   display: flex;
   width: 100%;
-  /* width: 100vw; */
   justify-content: center;
 }
-
-/* 1366以上の設定 */
-@media screen and (min-width: 1366px) {
-  .skills,
-  .strength,
-  .love {
-    /* .design { */
-    width: 960px;
-  }
-}
-
-/* @media screen and (max-width: 1366px) {
-  .skills,
-  .strength,
-  .love {
-    width: 100vw;
-  }
-} */
 
 @media screen and (max-width: 767px) {
   .skills .top_contents,
@@ -89,11 +70,12 @@ h2 {
   letter-spacing: 0.2em;
   writing-mode: vertical-rl;
   font-feature-settings: initial;
+  background: #fffcf5;
   border: 1px solid #ec6c4e;
   padding: 21px 14px 68px;
 }
 
-.ttl p {
+.cursive {
   font-size: 30px;
   line-height: 0.6;
   letter-spacing: 0.12em;
@@ -104,12 +86,12 @@ h2 {
 }
 
 .erase {
-  width: 10px;
+  width: 3px;
   height: 20px;
   background: #fffcf5;
   position: absolute;
   top: 23px;
-  left: 56px;
+  left: 58px;
 }
 
 .ttl_line {
@@ -127,20 +109,21 @@ h2 {
 @media screen and (max-width: 767px) {
   .ttl {
     width: auto;
+    position: static;
   }
 
   h2 {
     color: #ec6c4e;
     writing-mode: horizontal-tb;
     padding: 0px;
-    margin: 69px auto 28px 97px;
+    background: transparent;
     border: none;
+    position: relative;
   }
 
-  .ttl p {
-    top: -25px;
+  .cursive {
     bottom: auto;
-    left: 55px;
+    left: auto;
   }
 
   .erase {
@@ -157,16 +140,13 @@ h2 {
 }
 
 /* --------------------
-   profile 
+プロフィール
 -------------------- */
 
 .profile {
   background-image: url(../images/flower001.png);
   background-repeat: no-repeat;
   background-position: 58% bottom;
-  /* background-image: url(../images/flower002.png);
-  background-repeat: no-repeat;
-  background-position: right bottom; */
 }
 
 .profile .first_contents {
@@ -221,7 +201,6 @@ h2 {
   .profile .txt {
     width: 503px;
     padding-right: 0;
-    margin-top: 125px;
   }
 
   .profile .pc_txt p,
@@ -252,6 +231,14 @@ h2 {
 
   .profile .ttl {
     height: auto;
+    margin: 69px auto 28px 97px;
+  }
+
+  .profile h2 {
+  }
+
+  .profile .cursive {
+    /* left: 55px; */
   }
 
   .profile .pc_txt,
@@ -275,6 +262,7 @@ h2 {
   .profile .second_contents {
     width: 520px;
     margin-left: 42px;
+    margin-top: 125px;
   }
 
   .profile .sp_txt_last {
@@ -288,14 +276,11 @@ h2 {
   }
 }
 /* --------------------
-   history 
+ヒストリー
 -------------------- */
 
 .history {
   width: 100vw;
-  /* background-image: url(../images/flower002.png);
-  background-repeat: no-repeat;
-  background-position: right bottom; */
 }
 
 .history .top_contents {
@@ -405,10 +390,6 @@ h3 {
 }
 
 @media screen and (max-width: 1100px) {
-  .history {
-    /* width: 137vw; */
-  }
-
   .history .contents {
     max-width: none;
     min-width: 840px;
@@ -418,7 +399,6 @@ h3 {
 @media screen and (max-width: 767px) {
   .history {
     width: 1040px;
-    /* width: auto; */
     background-image: url(../images/flower002.png);
     background-repeat: no-repeat;
     background-position: right 93%;
@@ -428,126 +408,33 @@ h3 {
   .history .top_contents {
     display: block;
     width: 100%;
-    /* justify-content: center; */
-    /* gap: 6%; */
-    /* position: relative; */
   }
 
   .history .ttl {
     height: auto;
+    margin: 69px auto 28px;
   }
 
   .history h2 {
     margin-left: 0px;
   }
 
+  .history .cursive {
+    /* left: -52px; */
+  }
+
   .history .contents {
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* gap: 1%; */
-    /* width: 72%; */
     width: 840px;
-    /* max-width: none; */
-    /* min-width: 840px; */
-    /* position: relative; */
     margin-top: 40px;
-  }
-
-  .history .img {
-    /* width: 114%; */
-    /* position: absolute; */
-    /* bottom: 0px; */
-    /* right: 0%; */
-    /* z-index: 1; */
-  }
-
-  .history .content {
-    /* border-top: 1px solid #f2917e; */
-    /* border-left: 1px solid #f2917e; */
-    /* display: flex; */
-    /* position: relative; */
-    /* width: 90px; */
-    /* height: 400px; */
-  }
-
-  h3 {
-    /* letter-spacing: 0.18em; */
-    /* writing-mode: vertical-rl; */
-    /* color: #fffcf5; */
-    /* width: 27px; */
-    /* height: 86px; */
-    /* background-color: #f2917e; */
-    /* text-align: center; */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-  }
-
-  .history .txt {
-    /* writing-mode: vertical-rl; */
-    /* display: block; */
-    /* margin-top: 14px; */
-    /* margin-left: 9%; */
-    /* position: relative; */
-    /* z-index: 2; */
-  }
-
-  .line_diagonal {
-    /* width: 13px; */
-    /* border-bottom: 1px solid #f2917e; */
-    /* transform: rotate(45deg); */
-    /* position: absolute; */
-    /* top: -5px; */
-    /* left: 88%; */
-  }
-
-  .history .content_last {
-    /* display: flex; */
-    /* gap: 14px; */
-  }
-
-  .history .content_last p {
-    /* line-height: 1.5; */
-    /* letter-spacing: 0.025em; */
-    /* position: relative; */
-    /* z-index: 2; */
-  }
-
-  .history .content_bottom {
-    /* width: 280px; */
-    /* margin-top: 88px; */
-  }
-
-  .history .content_bottom p:nth-of-type(1) {
-    /* color: #fffcf5; */
-    /* text-align: center; */
-    /* line-height: 2; */
-    /* width: 263px; */
-    /* border: 1px solid #fffcf5; */
-    /* box-sizing: border-box; */
-    /* margin: 0 auto; */
-    /* position: relative; */
-    /* z-index: 3; */
-  }
-
-  .history .content_bottom p:nth-of-type(2) {
-    /* color: #fffcf5; */
-    /* line-height: 1.5; */
-    /* letter-spacing: 0.025em; */
-    /* text-align: center; */
-    /* width: 270px; */
-    /* margin: 10px auto 0px; */
-    /* position: relative; */
-    /* z-index: 4; */
   }
 }
 
 /* --------------------
-   skills 
+スキル 
 -------------------- */
 
 .skills {
-  width: 90vw;
+  width: 80vw;
   background-image: url(../images/flower002.png);
   background-repeat: no-repeat;
   background-position: left bottom;
@@ -633,9 +520,6 @@ td {
 }
 
 @media screen and (max-width: 1100px) {
-  .skills {
-  }
-
   .skills table:nth-of-type(1) {
     margin-left: 8%;
   }
@@ -650,17 +534,19 @@ td {
     background-image: none;
   }
 
-  /* .skills .top_contents {
-    display: block;
-  } */
-
   .skills .ttl {
     height: auto;
+    display: flex;
+    justify-content: center;
+    margin: 69px auto 28px;
   }
 
   .skills h2 {
-    width: 142px;
-    margin: 69px auto 65px;
+    /* width: 142px; */
+  }
+
+  .skills .cursive {
+    /* left: 220px; */
   }
 
   .pc_table {
@@ -690,7 +576,7 @@ td {
 }
 
 /* -------------------- 
-   共通 strength love design 
+共通 ストレングス・ラブ・デザイン 
 -------------------- */
 
 .strength .top_contents,
@@ -717,12 +603,6 @@ td {
 }
 
 @media screen and (max-width: 767px) {
-  /* .strength,
-  .love,
-  .design {
-    margin-left: 100px;
-  } */
-
   .strength .contents,
   .love .contents,
   .design .contents {
@@ -730,29 +610,19 @@ td {
     margin-left: auto;
     margin-right: auto;
   }
-  /* .strength .content,
-  .love .content,
-  .design .content {
-    text-align: center;
-  } */
 }
 
 /* -------------------- 
-  strength 
+ストレングス
 -------------------- */
 
 .strength {
-  width: 650px;
+  width: 100vw;
+  /* width: 650px; */
   background-image: url(../images/flower003.png);
   background-repeat: no-repeat;
   background-position: right bottom;
 }
-
-/* .strength {
-  background-image: url(../images/flower002.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-} */
 
 .strength .ttl {
   height: 227px;
@@ -773,39 +643,29 @@ td {
 
 @media screen and (max-width: 767px) {
   .strength {
-    /* width: 100vw; */
-    /* background-image: url(../images/flower003.png); */
-    /* background-repeat: no-repeat; */
     background-position: right 93%;
     background-size: 160px;
   }
 
   .strength .ttl {
     height: auto;
-  }
+    display: flex;
+    justify-content: center;
 
-  .strength h2 {
-    width: 120px;
     margin: 69px auto 65px;
   }
 
-  .strength .ttl_line {
-    /* width: 970%; */
+  .strength h2 {
+    /* width: 120px; */
   }
 
   .strength .contents > p:nth-of-type(1) {
-    /* margin-top: 78px; */
     width: 272px;
-  }
-
-  .strength .contents > p:nth-of-type(2) {
-    /* width: 272px; */
-    /* margin-top: 32px; */
   }
 }
 
 /* -------------------- 
-   love 
+ラブ
 -------------------- */
 
 .love {
@@ -822,25 +682,24 @@ td {
 
 @media screen and (max-width: 767px) {
   .love {
-    width: 100vw;
+    width: 30vw;
   }
 
   .love .ttl {
     height: auto;
-  }
+    display: flex;
+    justify-content: center;
 
-  .love h2 {
-    width: 120px;
     margin: 69px auto 65px;
   }
 
-  .love .ttl_line {
-    /* width: 1080%; */
+  .love h2 {
+    /* width: 120px; */
   }
 }
 
 /* --------------------
-   design 
+デザイン
 -------------------- */
 
 .design {
@@ -848,7 +707,6 @@ td {
   background-image: url(../images/flower004.png);
   background-repeat: no-repeat;
   background-position: 88% bottom;
-  /* margin-right: 200px; */
 }
 
 .design .ttl {
@@ -861,24 +719,115 @@ td {
 
 @media screen and (max-width: 767px) {
   .design {
-    /* width: 100vw; */
-    /* background-image: url(../images/flower004.png); */
-    /* background-repeat: no-repeat; */
     background-position: 88% 93%;
     background-size: 160px;
-    /* margin-right: 200px; */
   }
 
   .design .ttl {
     height: auto;
-  }
+    display: flex;
+    justify-content: center;
 
-  .design h2 {
-    width: 167px;
     margin: 69px auto 65px;
   }
 
-  .design .ttl_line {
-    /* width: 300%; */
+  .design h2 {
+    /* width: 167px; */
+  }
+}
+/* 1366以上の設定 */
+@media screen and (min-width: 1366px) {
+  .skills,
+  .strength,
+  .love {
+    width: 960px;
+  }
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+文字アニメーション 流れるテキスト
+ーーーーーーーーーーーーーーーーーーーー */
+
+/*全共通*/
+
+.slide-in {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.slide-in_inner {
+  display: inline-block;
+}
+
+/*左右のアニメーション*/
+.leftAnime {
+  opacity: 0; /*事前に透過0にして消しておく*/
+}
+
+.slideAnimeLeftRight {
+  animation-name: slideTextX100;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  /* opacity: 1; */
+  opacity: 0;
+}
+
+@keyframes slideTextX100 {
+  from {
+    transform: translateX(-100%); /*要素を左の枠外に移動*/
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0); /*要素を元の位置に移動*/
+    opacity: 1;
+  }
+}
+
+.slideAnimeRightLeft {
+  animation-name: slideTextX-100;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes slideTextX-100 {
+  from {
+    transform: translateX(100%); /*要素を右の枠外に移動*/
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0); /*要素を元の位置に移動*/
+    opacity: 1;
+  }
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+ヒストリーのグラフが横からフェードインする
+ーーーーーーーーーーーーーーーーーーーー */
+
+/*スタート時は要素自体を透過0にするためのopacity:0;を指定する*/
+.history_box {
+  opacity: 0;
+}
+
+/* 動かしたい動き（今回は” ふわっ” を採用）*/
+.history_fadein {
+  animation-name: fadeUpAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
