--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -44,7 +44,9 @@ section {
   }
 }
 
-/* ---------- フォント ---------- */
+/* ーーーーーーーーーーーーーーーーーーーー 
+フォント
+ーーーーーーーーーーーーーーーーーーーー */
 
 .en {
   font-family: din-2014, sans-serif;
@@ -67,7 +69,9 @@ section {
   text-align: right;
 }
 
-/* ---------- 左 固定デザイン---------- */
+/* ーーーーーーーーーーーーーーーーーーーー 
+左固定アニメーション
+ーーーーーーーーーーーーーーーーーーーー */
 
 .top_portfolioname {
   width: 4%;
@@ -76,7 +80,7 @@ section {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 10001;
+  z-index: 9980;
 }
 
 .top_portfolioname span {
@@ -123,9 +127,20 @@ section {
     writing-mode: horizontal-tb;
     line-height: 3.75;
   }
+
+  @keyframes loop-animation {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
 }
 
-/* ----------右 固定デザイン---------- */
+/* ーーーーーーーーーーーーーーーーーーーー
+右固定ナビゲーション
+ーーーーーーーーーーーーーーーーーーーー */
 
 .header {
   display: flex;
@@ -137,7 +152,7 @@ section {
   position: fixed;
   right: 0px;
   /* 消したもの② */
-  z-index: 10000;
+  z-index: 9990;
 }
 
 header .wrapper {
@@ -151,21 +166,45 @@ header .wrapper {
   flex-direction: column-reverse;
 }
 
-.pc_nav li {
+.pc_nav ul {
   width: 38px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.pc_nav ul {
+.pc_nav li {
   font-size: 16px;
 }
 
-.pc_nav .line {
+.pc_nav .line_vertical {
   width: 1px;
   height: 400px;
-  background: #000;
+  background: #423732;
+}
+
+.not_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 125px;
+  color: #ad9d9a;
+  border-top: 1px solid #423732;
+}
+
+.back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 39px;
+  height: 125px;
+  background: #ad9d9a;
+}
+
+.pc-nav_list li.current a,
+.pc-nav_list li a:hover {
+  color: #53c711;
 }
 
 @media screen and (max-width: 1336px) {
@@ -181,7 +220,9 @@ header .wrapper {
   }
 }
 
-/* ---------- スマホ版メニュー ---------- */
+/* ーーーーーーーーーーーーーーーーーーーー 
+スマホ版メニュー 
+ーーーーーーーーーーーーーーーーーーーー */
 
 .sp_menu,
 .sp_btn {
@@ -194,7 +235,9 @@ header .wrapper {
     display: none;
   }
 
-  /* ---------- ハンバーガーメニュー(ボタン) ---------- */
+  /* ーーーーーーーーーーーーーーーーーーーー 
+  ハンバーガーメニュー(ボタン) 
+  ーーーーーーーーーーーーーーーーーーーー */
 
   .sp_btn {
     display: block;
@@ -243,7 +286,9 @@ header .wrapper {
     transform: rotate(-90deg);
   }
 
-  /* ---------- スマホ版メニューの見た目 ---------- */
+  /* ーーーーーーーーーーーーーーーーーーーー
+スマホ版メニューの見た目 
+ーーーーーーーーーーーーーーーーーーーー */
 
   .header.open {
     display: block;
@@ -273,15 +318,6 @@ header .wrapper {
   .sp_menu > div {
     display: flex;
   }
-
-  /* .sp_menu {
-    opacity: 0;
-    transition: 0.3s;
-  }
-
-  .sp_menu.active {
-    opacity: 1;
-  } */
 
   .menu_portfolioname {
     height: 100vh;
@@ -313,7 +349,7 @@ header .wrapper {
     height: 100%;
   }
 
-  .sp_nav li {
+  .sp_nav ul {
     width: 100%;
     vertical-align: bottom;
     position: absolute;
@@ -321,7 +357,7 @@ header .wrapper {
     left: 0px;
   }
 
-  .sp_nav ul {
+  .sp_nav li {
     font-size: 22px;
     display: flex;
     align-items: flex-end;
@@ -332,7 +368,7 @@ header .wrapper {
     position: relative;
   }
 
-  .sp_nav ul span {
+  .sp_nav li span {
     font-size: 12px;
     letter-spacing: 0em;
 
@@ -362,7 +398,9 @@ header .wrapper {
     left: 0;
   }
 }
-/* ---------- SP版 左上文字 ---------- */
+/* ーーーーーーーーーーーーーーーーーーーー
+SP版 左上文字
+ーーーーーーーーーーーーーーーーーーーー */
 
 .page_ttl {
   display: flex;
@@ -386,4 +424,148 @@ header .wrapper {
   width: 40px;
   height: 30px;
   text-align: center;
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+文字アニメーション 一文字ずつ文字が現れる
+ーーーーーーーーーーーーーーーーーーーー*/
+
+.eachTextAnime span {
+  opacity: 0;
+}
+.eachTextAnime.appeartext span {
+  animation: text_anime_on 1s ease-out forwards;
+}
+@keyframes text_anime_on {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+ボタンがオンマウスで浮き上がる
+ーーーーーーーーーーーーーーーーーーーー*/
+.float {
+  background: #fff;
+  border: 1px solid #53c711;
+  border-radius: 60px;
+  color: #53c711;
+  display: inline-block;
+  position: relative;
+  top: 0;
+  text-decoration: none;
+  outline: none;
+  transition: all 0.3s;
+}
+
+.float:hover {
+  top: -3px;
+  box-shadow: 0 1px 5px #a6eb83, 0 0 10px #eaf6e2;
+  border-color: #53c711;
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+ボタンがオンマウスで浮き上がる
+ーーーーーーーーーーーーーーーーーーーー*/
+.floatup {
+  position: relative;
+  top: 0;
+  display: inline-block;
+  color: #333;
+  text-decoration: none;
+  outline: none;
+  /*アニメーションの設定*/
+  transition: all 0.3s;
+}
+.floatup:hover {
+  /* filter: grayscale(40%); */
+  top: -3px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+}
+
+/* ーーーーーーーーーーーーーーーーーーーー
+スクロールダウン
+ーーーーーーーーーーーーーーーーーーーー*/
+
+/*スクロールダウン全体の場所*/
+.scrolldown2 {
+  /*描画位置※位置は適宜調整してください*/
+  position: absolute;
+  top: 35%;
+  left: 6%;
+}
+
+/*Scrollテキストの描写*/
+.scrolldown2 span {
+  /*描画位置*/
+  position: absolute;
+  left: 8px;
+  bottom: 3px;
+  /*テキストの形状*/
+  color: #423732;
+  font-size: 1rem;
+  letter-spacing: 0.1em;
+  /*縦書き設定*/
+  -ms-writing-mode: tb-rl;
+  -webkit-writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
+}
+
+/* 丸の描写 */
+.scrolldown2:before {
+  content: "";
+  /*描画位置*/
+  position: absolute;
+  bottom: 0;
+  left: -4px;
+  /*丸の形状*/
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #423732;
+  /*丸の動き1.6秒かけて透過し、永遠にループ*/
+  animation: circlemove 1.6s ease-in-out infinite,
+    cirlemovehide 1.6s ease-out infinite;
+}
+
+/*下からの距離が変化して丸の全体が上から下に動く*/
+@keyframes circlemove {
+  0% {
+    bottom: 45px;
+  }
+  100% {
+    bottom: -5px;
+  }
+}
+
+/*上から下にかけて丸が透過→不透明→透過する*/
+@keyframes cirlemovehide {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* 線の描写 */
+.scrolldown2:after {
+  content: "";
+  /*描画位置*/
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  /*線の形状*/
+  width: 2px;
+  height: 50px;
+  background: #423732;
 }
